# Timestar

./: .gitignore  README.md  package-lock.json  package.json  setup-everything.bat  tailwind.config.js  vite.config.js
.github/workflows/: android.yml
scripts/: build-android.sh  setup-android-wsl.sh
src/: App.jsx  alarm.css  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs
src/components/: BottomNav.jsx  Navbar.jsx  PageHeader.jsx
src/hooks/: useTheme.jsx
src/managers/: audioManager.js  pomodoroManager.js  shortcutManager.js  widgetWindow.js
src/pages/: AlarmPage.jsx  AlarmPopup.jsx  CalendarPage.jsx  ClockPage.jsx  PomodoroPage.jsx  SettingsPage.jsx  StopwatchPage.jsx  TimerPage.jsx
src/sections/: AlarmSection.jsx  ClockSection.jsx  MoreSection.jsx
src/utils/: alarmUtils.js  settingsUtils.js  timeUtils.js  worldClockUtils.js
